--- a/index.html
+++ b/index.html
@@ -21,182 +21,193 @@
     <!-- ================= HEADER ================= -->
     <header class="header">
       <div class="header__container">
-        <div class="header__brand">
-          <span class="header__logo">Minto 🍃</span>
-        </div>
+        <span class="header__logo">Minto 🍃</span>
 
         <nav class="header__nav">
           <ul class="header__nav-list">
-            <li class="header__nav-item">
-              <a href="#" class="header__nav-link">Рецепти</a>
-            </li>
-            <li class="header__nav-item">
+            <li><a href="#" class="header__nav-link">Рецепти</a></li>
+            <li>
               <a href="#" class="header__nav-link header__nav-link--active"> Меню на день </a>
             </li>
-            <li class="header__nav-item">
-              <a href="#" class="header__nav-link">Меню на тиждень</a>
-            </li>
-            <li class="header__nav-item">
-              <a href="#" class="header__nav-link">Список покупок</a>
-            </li>
-            <li class="header__nav-item">
-              <a href="#" class="header__nav-link">Статистика</a>
-            </li>
+            <li><a href="#" class="header__nav-link">Меню на тиждень</a></li>
+            <li><a href="#" class="header__nav-link">Список покупок</a></li>
+            <li><a href="#" class="header__nav-link">Статистика</a></li>
           </ul>
         </nav>
 
         <div class="header__actions">
           <button class="theme-toggle" type="button" aria-label="Змінити тему">
-            <svg class="icon icon-sun" viewBox="0 0 24 24" aria-hidden="true">
+            <svg
+              class="sun-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round">
               <circle cx="12" cy="12" r="5" />
-              <g>
-                <line x1="12" y1="1" x2="12" y2="4" />
-                <line x1="12" y1="20" x2="12" y2="23" />
-                <line x1="1" y1="12" x2="4" y2="12" />
-                <line x1="20" y1="12" x2="23" y2="12" />
-                <line x1="4.2" y1="4.2" x2="6.3" y2="6.3" />
-                <line x1="17.7" y1="17.7" x2="19.8" y2="19.8" />
-                <line x1="4.2" y1="19.8" x2="6.3" y2="17.7" />
-                <line x1="17.7" y1="6.3" x2="19.8" y2="4.2" />
-              </g>
+              <line x1="12" y1="1" x2="12" y2="3" />
+              <line x1="12" y1="21" x2="12" y2="23" />
+              <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
+              <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
+              <line x1="1" y1="12" x2="3" y2="12" />
+              <line x1="21" y1="12" x2="23" y2="12" />
+              <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
+              <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
             </svg>
 
-            <svg class="icon icon-moon" viewBox="0 0 24 24" aria-hidden="true">
-              <path d="M21 12.8A9 9 0 1111.2 3a7 7 0 009.8 9.8z" />
+            <svg
+              class="moon-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="20"
+              height="20"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round">
+              <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
             </svg>
           </button>
 
-          <div class="header__profile">
-            <span class="header__profile-name">Ольга</span>
-          </div>
+          <span class="header__profile-name">Ольга</span>
         </div>
       </div>
     </header>
 
     <!-- ================= LAYOUT ================= -->
     <div class="layout">
-      <!-- ============== SIDEBAR ================= -->
+      <!-- ============== LEFT SIDEBAR ================= -->
       <aside class="sidebar">
-        <nav class="sidebar__nav">
-          <ul class="sidebar__days">
-            <li class="sidebar__day">
-              <button class="sidebar__day-btn" data-day="monday" aria-current="true">
-                Понеділок
-              </button>
-            </li>
-            <li class="sidebar__day">
-              <button class="sidebar__day-btn" data-day="tuesday">Вівторок</button>
-            </li>
-            <li class="sidebar__day">
-              <button class="sidebar__day-btn" data-day="wednesday">Середа</button>
-            </li>
-            <li class="sidebar__day">
-              <button class="sidebar__day-btn" data-day="thursday">Четвер</button>
-            </li>
-            <li class="sidebar__day">
-              <button class="sidebar__day-btn" data-day="friday">Пʼятниця</button>
-            </li>
-            <li class="sidebar__day">
-              <button class="sidebar__day-btn" data-day="saturday">Субота</button>
-            </li>
-            <li class="sidebar__day">
-              <button class="sidebar__day-btn" data-day="sunday">Неділя</button>
-            </li>
-          </ul>
-        </nav>
+        <ul class="sidebar__days">
+          <li><button class="sidebar__day-btn" data-day="monday">Понеділок</button></li>
+          <li><button class="sidebar__day-btn" data-day="tuesday">Вівторок</button></li>
+          <li><button class="sidebar__day-btn" data-day="wednesday">Середа</button></li>
+          <li><button class="sidebar__day-btn" data-day="thursday">Четвер</button></li>
+          <li><button class="sidebar__day-btn" data-day="friday">Пʼятниця</button></li>
+          <li><button class="sidebar__day-btn" data-day="saturday">Субота</button></li>
+          <li><button class="sidebar__day-btn" data-day="sunday">Неділя</button></li>
+        </ul>
       </aside>
 
-      <!-- ============== MAIN ==================== -->
+      <!-- ============== MAIN ================= -->
       <main class="main">
-        <!-- ===== PAGE HEADER ===== -->
         <section class="day-header">
           <h1 class="day-header__title">Меню на день</h1>
-          <p class="day-header__date" id="dayDate">Понеділок</p>
+          <p class="day-header__date" id="dayDate"></p>
         </section>
 
-        <!-- ===== DAY MENU ===== -->
-        <section class="day-menu" id="dayMenu">
-          <!-- BREAKFAST -->
-          <article class="meal meal--breakfast" data-meal="breakfast">
+        <section class="day-menu">
+          <article class="meal" data-meal="breakfast">
             <div class="meal__header">
               <h2 class="meal__title">Сніданок</h2>
-
-              <button class="meal__add-button" type="button" data-meal="breakfast">+</button>
+              <button class="meal__add" aria-label="Додати прийом їжі">
+                <span></span>
+              </button>
             </div>
-
-            <ul class="meal__recipes">
-              <li class="meal__recipe">
-                <span class="meal__recipe-name">Вівсянка з бананом</span>
-                <span class="meal__recipe-kcal">350 ккал</span>
-              </li>
-            </ul>
+            <ul class="meal__recipes"></ul>
           </article>
 
-          <!-- SNACK 1 -->
-          <article class="meal meal--snack" data-meal="snack1">
+          <article class="meal" data-meal="snack1">
             <div class="meal__header">
               <h2 class="meal__title">Перекус 1</h2>
-
-              <button class="meal__add-button" type="button" data-meal="snack1">+</button>
+              <button class="meal__add" aria-label="Додати прийом їжі">
+                <span></span>
+              </button>
             </div>
-
             <ul class="meal__recipes"></ul>
           </article>
 
-          <!-- LUNCH -->
-          <article class="meal meal--lunch" data-meal="lunch">
+          <article class="meal" data-meal="lunch">
             <div class="meal__header">
               <h2 class="meal__title">Обід</h2>
-
-              <button class="meal__add-button" type="button" data-meal="lunch">+</button>
+              <button class="meal__add" aria-label="Додати прийом їжі">
+                <span></span>
+              </button>
             </div>
-
-            <ul class="meal__recipes">
-              <li class="meal__recipe">
-                <span class="meal__recipe-name">Курка з рисом</span>
-                <span class="meal__recipe-kcal">520 ккал</span>
-              </li>
-            </ul>
-          </article>
-
-          <!-- SNACK 2 -->
-          <article class="meal meal--snack" data-meal="snack2">
-            <div class="meal__header">
-              <h2 class="meal__title">Перекус 2</h2>
-
-              <button class="meal__add-button" type="button" data-meal="snack2">+</button>
-            </div>
-
             <ul class="meal__recipes"></ul>
           </article>
 
-          <!-- DINNER -->
-          <article class="meal meal--dinner" data-meal="dinner">
+          <article class="meal" data-meal="snack2">
+            <div class="meal__header">
+              <h2 class="meal__title">Перекус 2</h2>
+              <button class="meal__add" aria-label="Додати прийом їжі">
+                <span></span>
+              </button>
+            </div>
+            <ul class="meal__recipes"></ul>
+          </article>
+
+          <article class="meal" data-meal="dinner">
             <div class="meal__header">
               <h2 class="meal__title">Вечеря</h2>
-
-              <button class="meal__add-button" type="button" data-meal="dinner">+</button>
+              <button class="meal__add" aria-label="Додати прийом їжі">
+                <span></span>
+              </button>
             </div>
-
-            <ul class="meal__recipes">
-              <li class="meal__recipe">
-                <span class="meal__recipe-name">Овочевий салат</span>
-                <span class="meal__recipe-kcal">280 ккал</span>
-              </li>
-            </ul>
+            <ul class="meal__recipes"></ul>
           </article>
         </section>
 
-        <!-- ===== DAY SUMMARY ===== -->
         <section class="day-summary">
-          <div class="day-summary__item">
-            <span class="day-summary__label">Разом за день</span>
-            <span class="day-summary__value">1 150 ккал</span>
-          </div>
+          <span class="day-summary__label">Разом за день</span>
+          <span class="day-summary__value">0 ккал</span>
+          <button id="clearDayBtn" type="button">Очистити день</button>
         </section>
       </main>
+
+      <!-- ============== RIGHT SIDEBAR ================= -->
+      <aside class="right-sidebar">
+        <section class="stats">
+          <div class="stat-card stat-card--kcal">
+            <h3 class="stat-card__title">Калорії</h3>
+            <div class="stat-card__value"><span id="kcalCurrent">0</span> ккал</div>
+            <div class="stat-card__progress">
+              <div class="stat-card__progress-bar" id="kcalProgress"></div>
+            </div>
+          </div>
+
+          <div class="stat-card stat-card--protein">
+            <h3 class="stat-card__title">Білки</h3>
+            <div class="stat-card__value"><span id="proteinCurrent">0</span> г</div>
+            <div class="stat-card__progress">
+              <div class="stat-card__progress-bar"></div>
+            </div>
+          </div>
+
+          <div class="stat-card stat-card--fat">
+            <h3 class="stat-card__title">Жири</h3>
+            <div class="stat-card__value"><span id="fatCurrent">0</span> г</div>
+            <div class="stat-card__progress">
+              <div class="stat-card__progress-bar"></div>
+            </div>
+          </div>
+
+          <div class="stat-card stat-card--carbs">
+            <h3 class="stat-card__title">Вуглеводи</h3>
+            <div class="stat-card__value"><span id="carbsCurrent">0</span> г</div>
+            <div class="stat-card__progress">
+              <div class="stat-card__progress-bar"></div>
+            </div>
+          </div>
+
+          <div class="stat-card stat-card--water">
+            <h3 class="stat-card__title">Вода</h3>
+            <div class="stat-card__value"><span id="waterCurrent">0</span> л</div>
+            <div class="stat-card__meta">Залишилось: <span id="waterLeft">0</span> л</div>
+            <div class="stat-card__progress">
+              <div class="stat-card__progress-bar"></div>
+            </div>
+          </div>
+        </section>
+      </aside>
     </div>
-    <!-- ================= ADD FOOD MODAL ================= -->
+
+    <!-- ================= MODAL ================= -->
     <div class="modal" id="addFoodModal" hidden>
       <div class="modal__overlay"></div>
 
@@ -207,9 +218,15 @@
         </header>
 
         <div class="modal__body">
-          <ul class="modal__results" id="foodResults">
-            <!-- сюди JS підставляє всі збіги -->
-          </ul>
+          <input
+            type="number"
+            class="modal__weight"
+            id="foodWeight"
+            placeholder="Вага, г"
+            min="1"
+            step="1" />
+
+          <ul class="modal__results modal__list" id="foodResults"></ul>
         </div>
 
         <footer class="modal__footer">
@@ -217,10 +234,12 @@
         </footer>
       </div>
     </div>
-    <!-- ================= SKRIPT ================= -->
+
+    <!-- ================= SCRIPTS ================= -->
     <script src="js/day-data.js"></script>
     <script type="module" src="js/food-api.js"></script>
     <script type="module" src="js/meals.js"></script>
+    <script type="module" src="js/stats.js"></script>
     <script type="module" src="js/sidebar-days.js"></script>
     <script src="js/theme-toggle.js"></script>
   </body>
