feat(profile): update profile page with daily norms and macros display
feat(meals): add daily calorie norm tracking and progress calculation

feat(stats): enhance stats display with user-specific macros and water intake

refactor(profile): improve form structure and styling for better UX

style(profile): refine SCSS for profile page layout and components

--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minto — Профіль</title>
 
-    <!-- THEME INIT -->
     <script>
       (function () {
         const theme = localStorage.getItem('theme');
@@ -19,7 +18,6 @@
   </head>
 
   <body class="page">
-    <!-- ================= HEADER ================= -->
     <header class="header">
       <div class="header__container">
         <span class="header__logo">Minto 🍃</span>
@@ -30,156 +28,156 @@
               <a href="index.html" class="header__nav-link">Меню на день</a>
             </li>
             <li>
-              <a
-                href="profile.html"
-                class="header__nav-link header__nav-link--active"
-              >
-                Профіль
-              </a>
+              <a href="profile.html" class="header__nav-link header__nav-link--active"> Профіль </a>
             </li>
           </ul>
         </nav>
 
         <div class="header__actions">
-          <button class="theme-toggle" type="button" aria-label="Змінити тему">
-            🌙
-          </button>
+          <button class="theme-toggle" type="button" aria-label="Змінити тему">🌙</button>
           <span class="header__profile-name">Ольга</span>
         </div>
       </div>
     </header>
 
-    <!-- ================= LAYOUT ================= -->
     <div class="layout">
-      <!-- ============== LEFT SIDEBAR ================= -->
       <aside class="sidebar">
         <ul class="sidebar__days">
           <li>
             <a href="index.html" class="sidebar__day-btn">Меню на день</a>
           </li>
           <li>
-            <a
-              href="profile.html"
-              class="sidebar__day-btn"
-              aria-current="true"
-            >
-              Профіль
-            </a>
+            <a href="profile.html" class="sidebar__day-btn" aria-current="true"> Профіль </a>
           </li>
         </ul>
       </aside>
 
-      <!-- ============== MAIN ================= -->
       <main class="main">
         <section class="profile-page">
-          <!-- ===== HEADER ===== -->
+          <!-- ================= PROFILE HEADER ================= -->
           <header class="profile-header">
             <div class="profile-header__avatar"></div>
+
             <div class="profile-header__info">
               <h1 class="profile-header__name">Ольга</h1>
               <span class="profile-header__email">olga@email.com</span>
             </div>
           </header>
 
-          <!-- ===== PARAMETERS ===== -->
+          <!-- ================= PROFILE CARD ================= -->
           <section class="profile-card">
             <h2 class="profile-card__title">Ваші параметри</h2>
 
             <form class="profile-form" id="profileForm">
+              <!-- ROW: AGE / HEIGHT / WEIGHT -->
               <div class="profile-form__row">
                 <div class="profile-form__field">
-                  <label class="profile-form__label">Вік</label>
-                  <input
-                    type="number"
-                    name="age"
-                    class="profile-form__input"
-                    min="10"
-                    max="100"
-                    required
-                  />
+                  <label class="profile-form__label" for="age"> Вік </label>
+                  <input id="age" type="number" name="age" class="profile-form__input" required />
                 </div>
 
                 <div class="profile-form__field">
-                  <label class="profile-form__label">Зріст (см)</label>
+                  <label class="profile-form__label" for="height"> Зріст (см) </label>
                   <input
+                    id="height"
                     type="number"
                     name="height"
                     class="profile-form__input"
-                    min="120"
-                    max="220"
-                    required
-                  />
+                    required />
                 </div>
 
                 <div class="profile-form__field">
-                  <label class="profile-form__label">Вага (кг)</label>
+                  <label class="profile-form__label" for="weight"> Вага (кг) </label>
                   <input
+                    id="weight"
                     type="number"
                     name="weight"
-                    class="profile-form__input"
-                    min="30"
-                    max="200"
                     step="0.1"
-                    required
-                  />
+                    class="profile-form__input"
+                    required />
                 </div>
               </div>
 
-              <div class="profile-form__row">
-                <div class="profile-form__field">
-                  <label class="profile-form__label">Стать</label>
-                  <select name="gender" class="profile-form__select">
-                    <option value="female">Жінка</option>
-                    <option value="male">Чоловік</option>
-                  </select>
-                </div>
+              <!-- GENDER -->
+              <div class="profile-form__field">
+                <label class="profile-form__label" for="gender"> Стать </label>
+                <select id="gender" name="gender" class="profile-form__select">
+                  <option value="female">Жінка</option>
+                  <option value="male">Чоловік</option>
+                </select>
               </div>
 
-              <!-- ===== ACTIVITY ===== -->
-              <div class="activity-level">
-                <label class="activity-level__option">
+              <!-- ACTIVITY LEVEL -->
+              <div class="activity-buttons">
+                <label class="activity-buttons__option">
                   <input type="radio" name="activity" value="1.2" checked />
-                  <span>Низька активність</span>
+                  <span class="activity-buttons__text">Низька активність</span>
                 </label>
 
-                <label class="activity-level__option">
+                <label class="activity-buttons__option">
                   <input type="radio" name="activity" value="1.55" />
-                  <span>Середня активність</span>
+                  <span class="activity-buttons__text">Середня активність</span>
                 </label>
 
-                <label class="activity-level__option">
+                <label class="activity-buttons__option">
                   <input type="radio" name="activity" value="1.75" />
-                  <span>Висока активність</span>
+                  <span class="activity-buttons__text">Висока активність</span>
                 </label>
               </div>
             </form>
           </section>
 
-          <!-- ===== RESULT ===== -->
-          <section class="profile-result">
-            <span class="profile-result__label">
-              Денна норма калорій
-            </span>
-            <strong class="profile-result__value" id="dailyCalories">
-              — ккал
-            </strong>
-          </section>
+          <!-- ================= RESULT ================= -->
+          <div class="profile-result">
+            <span class="profile-result__label"> Денна норма калорій </span>
+            <strong class="profile-result__value" id="dailyCalories"> — ккал </strong>
+          </div>
 
-          <!-- ===== ACTIONS ===== -->
+          <!-- ================= MACROS ================= -->
+          <div class="profile-macros">
+            <div class="profile-macros__item">
+              <span class="macro-label">Білки</span>
+              <div class="macro-input-wrapper">
+                <span id="normProtein">—</span>
+                <span>г</span>
+              </div>
+            </div>
+
+            <div class="profile-macros__item">
+              <span class="macro-label">Жири</span>
+              <div class="macro-input-wrapper">
+                <span id="normFat">—</span>
+                <span>г</span>
+              </div>
+            </div>
+
+            <div class="profile-macros__item">
+              <span class="macro-label">Вуглеводи</span>
+              <div class="macro-input-wrapper">
+                <span id="normCarbs">—</span>
+                <span>г</span>
+              </div>
+            </div>
+
+            <div class="profile-macros__item">
+              <span class="macro-label">Вода</span>
+              <div class="macro-input-wrapper">
+                <span id="normWater">—</span>
+                <span>л</span>
+              </div>
+            </div>
+          </div>
+
+          <!-- ================= ACTIONS ================= -->
           <div class="profile-actions">
-            <button
-              class="profile-actions__btn"
-              type="submit"
-              form="profileForm"
-            >
-              Зберегти
+            <button class="profile-actions__btn" type="submit" form="profileForm">
+              Зберегти налаштування
             </button>
           </div>
         </section>
       </main>
     </div>
 
-    <!-- ================= SCRIPTS ================= -->
     <script src="js/theme-toggle.js"></script>
     <script type="module" src="js/profile.js"></script>
   </body>
