--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
                 </svg>
               </button>
-              <span class="header__profile-name">Ольга</span>
+              <a href="profile.html" class="header__profile-name"> Ольга </a>
             </div>
           </div>
         </header>
